--- a/Locales/Login.css
+++ b/Locales/Login.css
@@ -1,6 +1,6 @@
 body{
     margin:0;
-    color:#0DFF8C;
+    color:#B6FF19;
    /* background:#c8c8c8;*/
     font:600 16px/18px 'Open Sans',sans-serif;
 }
@@ -23,7 +23,7 @@ a{color:inherit;text-decoration:none}
     height:100%;
     position:absolute;
     padding:90px 70px 50px 70px;
-    background:rgba(255,123,0,0.9);
+    background: rgba(240, 47, 0, 0.8);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -87,11 +87,19 @@ a{color:inherit;text-decoration:none}
     -webkit-text-security:circle;
 }
 .login-form .group .label{
-    color: #E80CB1;
+    color: #ece4ef;
     font-size:12px;
 }
 .login-form .group .button{
-    background:#0DFF8E;
+    background: #485dd9;
+}
+.login-form .group .button:hover{
+    transition:all .3s linear;
+    background: #689bff;
+}
+.login-form .group .button:active{
+    background: #454aff;
+    color:black;
 }
 .login-form .group label .icon{
     width:15px;
