--- a/Locales/Main.css
+++ b/Locales/Main.css
@@ -2,3 +2,8 @@ body{
     background-color: #e0e0e0;
     background-image: url("../Locales/wallpaper.jpg");
 }
+
+.lateralBar{
+    top: 0px;
+    position: fixed ;
+}
