--- a/Locales/Footer.css
+++ b/Locales/Footer.css
@@ -5,8 +5,9 @@
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-
-	padding: 55px 50px;
+	position: fixed;
+	bottom: 0px;
+	padding: 35px 50px;
 	margin-top: 80px;
 }
 
