--- a/Locales/Footer.css
+++ b/Locales/Footer.css
@@ -3,12 +3,14 @@
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
+	max-height: 200px;
 	text-align: left;
 	font: bold 16px sans-serif;
 	position: fixed;
 	bottom: 0px;
-	padding: 35px 50px;
+	padding: 5px 50px;
 	margin-top: 80px;
+	overflow: auto;
 }
 
 .footer-distributed .footer-left,
