Add User Show groups and fixed button user add

--- a/Locales/Main.css
+++ b/Locales/Main.css
@@ -1,11 +1,12 @@
 body{
+    margin: 0;
     background-color: #e0e0e0;
     background-image: url("../Locales/wallpaper.jpg");
 
 }
 
 .lateralBar{
-    top: 0px;
+    top: 0;
     position: fixed ;
 }
 
