--- a/Locales/LateralBar.css
+++ b/Locales/LateralBar.css
@@ -226,18 +226,51 @@ layout
 }
 .navigation .line .line2:hover a i {
     color: #D3A953;
+    padding-left: 20px;
+    transition: all 0.3s ease-out;
 }
 
+/*
 .navBtn:checked ~ .navigation {
     transform: translateX(0);
     transition: all 0.3s ease-out;
 }
-
 .navBtn:checked ~ .navigation .line .line2 {
     opacity: 1;
     transform: translateX(0);
     transition: all 0.6s ease-out;
+}*/
+
+
+
+
+
+.navBtn ~ .navigation {
+    transform: translateX(0);
+    transition: all 0.3s ease-out;
 }
+
+.navBtn ~ .navigation .line .line2 {
+    opacity: 1;
+    transform: translateX(0);
+    transition: all 0.6s ease-out;
+}
+
+.navBtn:checked ~ .navigation {
+    /*display: none;*/
+    transition: all 1.3s ease-out;
+    transform: rotate3d(50,190,190,120deg);
+
+}
+
+.navBtn:checked ~ .navigation .line .line2 {
+    opacity: 0;
+    transform: rotate3d(50,190,190,120deg);
+    transition: all 0.6s ease-out;
+}
+
+
+
 
 .navBtn {
     display: none;
