--- a/Locales/LateralBar.css
+++ b/Locales/LateralBar.css
@@ -74,6 +74,7 @@ links
 ========================================================================== */
 a {
     color: white;
+
 }
 
 /* ==========================================================================
@@ -90,10 +91,15 @@ i {
 /* ==========================================================================
 layout
 ========================================================================== */
+.lateralBar{
+    z-index: 2;
+}
+
 .container {
     max-width: 100%;
    /* margin: 0 auto;*/
     overflow: hidden;
+    z-index: 2;
 }
 
 .floatLeft {
