--- a/Locales/Group_ASSINGACTIONFUNCTION.css
+++ b/Locales/Group_ASSINGACTIONFUNCTION.css
@@ -1,17 +1,33 @@
 .CurrentFormContainer{
     width:100%;
     margin:auto;
-    max-width:525px;
-    min-height:670px;
+    max-width:925px;
+    min-height:1420px;
     position:relative;
     box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+    color: #d4b865;
+    font-size: 22px;
+}
+
+span{
+    color: #cedced;
+    padding-left: 6px;
+    font-size: 18px;
+}
+
+.descrip{
+    font-size: 20px;
+}
+
+h3 {
+    color: #AFCC14;
 }
 
 .CurrentForm1{
     width:100%;
     height:100%;
     position:absolute;
-    padding:50px 70px 50px 70px;
+    padding:10px 10px 10px 70px;
     background: rgba(45, 95, 191, 0.7);
 }
 .CurrentHeader{
@@ -19,10 +35,10 @@
     left:0;
     right:0;
     bottom:0;
-    padding-left: 150px;
     position:absolute;
     transition:all .8s linear;
-    color: white;
+    text-align: center;
+    color: #ffffff;
 }
 .CurrentForm1 .group .check{
     display:none;
